# liveform

./: .gitignore  README.md  prompts.md  pyproject.toml
forms/aiexam/: form.yaml
forms/aistories/: form.yaml
forms/aiunboxed2/: form.yaml
forms/datastack/: form.yaml
forms/tds-workshop/: form.yaml
src/liveform/: __init__.py  __main__.py  assets.py  auth.py  cli.py  config.py  server.py  store.py  uploads.py
tests/: browser_app.py  browser_live.py  browser_smoke.py  conftest.py  test_cli.py  test_config.py  test_server.py  test_store.py
